# api-mulheres-cientistas

api/: mulheres.db  pyproject.toml
api/mulheres_cientistas_api/: crud.py  database.py  main.py  models.py  schemas.py
ui/: package-lock.json  package.json
ui/src/: App.js  api.js
ui/src/components/: Card.js  CardList.js  CardModal.js  FormCreate.js  FormCreateModal.js  FormEdit.js  FormEditModal.js  Header.js  styles.css
